p2/confs/app2.yaml
# Deployment

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-deployment
  labels:
    app: app2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: app2-container
        image: hashicorp/http-echo
        args:
        - "-text=Hello from app2 (Served by pod: $(POD_NAME))"
        ports:
        - containerPort: 5678

---

# Service

apiVersion: v1
kind: Service
metadata:
  name: app2-service
spec:
  selector:
    app: app2
  ports:
  - port: 80
    targetPort: 5678
