p2/confs/app3.yaml
# Deploiement

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3-deployment
  labels:
    app: app3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app3
  template:
    metadata:
      labels:
        app: app3
    spec:
      containers:
      - name: app3-container
        image: hashicorp/http-echo
        args:
        - "-text=Hello from app3"
        ports:
        - containerPort: 5678

---

# Service

apiVersion: v1
kind: Service
metadata:
  name: app3-service
spec:
  selector:
    app: app3
  ports:
  - port: 80
    targetPort: 5678
